DBC22-1513: Fix for scrollbar

--- a/src/frontend/src/Components/Filters.scss
+++ b/src/frontend/src/Components/Filters.scss
@@ -18,10 +18,6 @@ button.btn.open-filters {
   }
 }
 
-::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
-}
-
 .filters {
   position: fixed;
   bottom: 0;
